syntax = "proto3";

package calculator;

option go_package = "./calculatorpb";

message SumRequest {
    int32 first_number = 1;
    int32 second_number =2;
}

message SumResponse {
    int32 sum_result = 1;
}

// for server streaming

message SumOneRequest {
    int32 first_number = 1;
    int32 last_number = 2;
}

message SumManyResponse {
    int32 sum_result = 1;
}
// for client streaming

message SumManyRequest {
    int32 first_number = 1;
    int32 last_number = 2;
}

message SumOneResponse {
    int32 sum_result = 1;
}

// for average client streaming
message AverageRequest {
    int32 number = 1;
}

message AverageResponse {
    double average = 1;
}

service CalculatorService {
    //for sum
    rpc Sum (SumRequest) returns (SumResponse);

    //for server streaming
    rpc SumStreaming (SumOneRequest) returns (stream SumManyResponse);

    // for client streaming
    rpc SumCStreaming (stream SumManyRequest) returns (SumOneResponse);
    // for average streaming
    rpc AverageService (stream AverageRequest) returns (AverageResponse);
}